--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.9.3",
     "parcel": "^2.9.3"
+  },
+  "dependencies": {
+    "core-js": "^3.32.1",
+    "regenerator-runtime": "^0.14.0"
   }
 }
